tests/baselines/reference/genericTypeReferencesRequireTypeArgs.errors.txt
tests/cases/compiler/genericTypeReferencesRequireTypeArgs.ts(7,9): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericTypeReferencesRequireTypeArgs.ts(8,9): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericTypeReferencesRequireTypeArgs.ts(9,11): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericTypeReferencesRequireTypeArgs.ts(10,11): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/genericTypeReferencesRequireTypeArgs.ts (4 errors) ====
    class C<T> {
       foo(): T { return null }
    }
    interface I<T> {
       bar(): T;
    }
    var c1: C; // error
            ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    var i1: I; // error
            ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    var c2: C<I>; // should be an error
              ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    var i2: I<C>; // should be an error
              ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    